--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wiki Search</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/b40153832f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -18,9 +18,18 @@
 </head>
 <body>
     <div class="body">
+        <h2 id="errorMessage" class="screenMessage">Error Please Reload Page</h2>
         <div id="content">
-    
         </div>
+
+        <div id="loadingContent"> 
+            <div class="fa-3x">
+                <i class="fas fa-spinner fa-spin"></i>
+            </div>
+        </div>
+
+        <h2 id="noResultFound" class="screenMessage"> No Results Found</h2>
+
     </div>
 </body>
 </html>
